--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>ETHIRAJ | HOME</title>
 </head>
 <body bgcolor="yellow">
+    <center>
     <h1>ETHIRAJ CONSTRUCTIONS</h1>
     <img src="static/images//2.gif" >
     <h2>Mayur Solanki : 9073988888</h2>
-
+    </center>
 </body>
 </html>
