--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body bgcolor="yellow">
     <center>
     <h1>ETHIRAJ CONSTRUCTIONS</h1>
+    <div class="tenor-gif-embed" data-postid="19726618" data-share-method="host" data-width="100%" data-aspect-ratio="1.7412587412587412"><a href="https://tenor.com/view/ajaxis-michel-gif-19726618">Ajaxis Michel GIF</a> from <a href="https://tenor.com/search/ajaxismichel-gifs">Ajaxismichel GIFs</a></div><script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <img src="static/images//2.gif" >
     <h2>Mayur Solanki : 9073988888</h2>
     </center>
